--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#next-logo {
+  display: none !important;
+}
+
+html {
+  scroll-behavior: smooth;
+}
